fix overflow problems

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -231,10 +231,6 @@ nav .navbar-right-menu .menu-item {
     text-align: center;
 }
 
-.lm_stack .lm_content {
-    overflow: auto;
-}
-
 @import "./console-panel.scss";
 @import "./editor-panel.scss";
 @import "./info-panel.scss";
